<resources>
    <string name="app_name">Calculadora</string>
    <string name="Multiplicar">×</string>
    <string name="Dividir">÷</string>
    <string name="ac">AC</string>
    <string name="_00">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Diminuir">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Somar">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="Ponto">.</string>
    <string name="Sinal">+/-</string>
    <string name="Igual">=</string>
    <string name="_Resultado">0</string>
    <string name="Visor" />
</resources>