<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/Visor"
        android:textColor="@color/btnLaranja"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLength="24"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text=""
                    android:background="@color/btnBege"
                    android:textColor="@color/white"
                    android:textSize="55dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ac"
                    android:background="@color/btnCorEscura"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Dividir"
                    android:background="@color/btnCorEscura"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnMultiplica"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Multiplicar"
                    android:background="@color/btnCorEscura"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <ImageButton
                    android:id="@+id/btnRemover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/btnCorEscura"
                    android:src="@drawable/ic_limpar"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNum7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_7"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnNum8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnNum9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_9"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnMenos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Diminuir"
                    android:background="@color/btnCorEscura"
                    android:textColor="@color/white"
                    android:textSize="28dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNum4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnNum5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnNum6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:background="@color/btnCorClara"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btnMais"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Somar"
                    android:background="@color/btnCorEscura"
                    android:textColor="@color/white"
                    android:textSize="28dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnNum1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_1"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />

                        <Button
                            android:id="@+id/btnNum2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_2"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />

                        <Button
                            android:id="@+id/btnNum3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_3"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnNum0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_0"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />

                        <Button
                            android:id="@+id/btnPonto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/Ponto"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />

                        <Button
                            android:id="@+id/btnSinal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/Sinal"
                            android:background="@color/btnCorClara"
                            android:textColor="@color/white"
                            android:textSize="28dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="horizontal"
                    android:layout_weight="3">
                    <Button
                        android:id="@+id/btnIgual"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Igual"
                        android:layout_gravity="center"
                        android:background="@color/btnLaranja"
                        android:textColor="@color/white"
                        android:textSize="28dp"
                        tools:ignore="NestedWeights" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>